Pre Entrega tres para entregar

--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Gamer's Shire</title>
+        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos, tu PC o consola. Encontra todos los titulos, sus historias, los mejores streamers especializados y mas. Sumate a la comunidad de gaming mas completa e interactiva.">
+        <meta name="keywords"  content="GAMING, CONSOLAS, HARDWARE, GIFTCARDS">
+        <title>The Gamer's Shire| Lo que necesitas en gaming</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -12,9 +14,10 @@
     </head>
     <body>
         <header>
+             <!--NAVEGADOR FIJO DE BOOTSTRAP CON DISEÑO PROPIO-->
             <nav class="navbar navbar-expand-lg  elHeaderBox">
                 <div class="container-fluid ">
-                  <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="" width="60" height="58"></a>
+                  <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="Logo" width="60" height="58"></a>
                   <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -41,97 +44,97 @@
               </nav>
         </header>
         <main>
+             <!--COLOQUE GRAN PARTE DEL CONTENIDO DE ESTA PAGINA DENTRO DEL MAIN PARA HACER UN USO MAS FACIL DEL MISMO-->
             <h1>The Gamer's Shire</h1>
             <h2 class="claseH2">GAMING</h2>
+            <p class="parrafoH2">Encontrá las consolas mejores rankeadas, pero no nos quedamos ahi encontra todos los componentes al mejor precio para armar tu PC gamer. Y como si fuera poco te dejamos Giftcards a precio de descuento para que puedas regalar estas fiestas</p>
             <h3 class="subtitulos3 boxSubtitulos">Consolas</h3>
             <section  class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="../assets/imagenes/xbox.webp" class="boxImg" alt="X box Serie X">
+                        <img src="../assets/imagenes/xbox.webp" class="boxImg" alt="X box Serie X" loading="lazy">
                         <h4  class="subtitulos4">Microsoft Xbox Series X 1tb Standard Negro</h4>
                         <a href="https://articulo.mercadolibre.com.ar/MLA-1141241177-microsoft-xbox-series-x-1tb-standard-negro-_JM?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=139714998371&matt_match_type=&matt_network=g&matt_device=c&matt_creative=585541187518&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=234834501&matt_product_id=MLA1141241177&matt_product_partition_id=1636168139489&matt_target_id=aud-1659384947926:pla-1636168139489&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfWYdKmjUZT9coiMKCH-Uy3q67lrAVcf3N5sID3aeg9Wh0SFabrqhcAaApV2EALw_wcB" class="linksExternos" target="_blank">X Box Serie XS</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/Play Station 5.webp" class="boxImg" alt="Play Station 5">
+                        <img src="../assets/imagenes/Play Station 5.webp" class="boxImg" alt="Play Station 5" loading="lazy">
                         <h4 class="subtitulos4">Sony PlayStation 5 825GB Standard color blanco y negro</h4>
                         <a href="https://www.mercadolibre.com.ar/sony-playstation-5-825gb-standard-color-blanco-y-negro/p/MLA16171888?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=139714998371&matt_match_type=&matt_network=g&matt_device=c&matt_creative=585541187518&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=231286750&matt_product_id=MLA16171888-product&matt_product_partition_id=1636168139449&matt_target_id=aud-1659384947926:pla-1636168139449&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfXbJCM9ctRLXzrME4tu4_Lfj3h8kXF0Z9yQX3e1mCNnMUSGWKo87gAaApwfEALw_wcB" class="linksExternos" target="_blank">Play Station 5</a>
                     </div>          
                     <div class="col-sm-12 col-md-6 col-lg-3">
-                        <img src="../assets/imagenes/Steamdeck.jpg" class="boxImg" alt="Steam Deck">
+                        <img src="../assets/imagenes/Steamdeck.jpg" class="boxImg" alt="Steam Deck" loading="lazy">
                         <h4  class="subtitulos4">Valve Steam Deck 64gb - 256gb </h4>
                         <a href="https://articulo.mercadolibre.com.ar/MLA-1148102641-valve-steam-deck-64gb-256gb-nuevas-a-pedido-leer-bien-_JM?searchVariation=174880536698#searchVariation=174880536698&position=2&search_layout=stack&type=item&tracking_id=fd4dae52-e275-4b75-adb9-d8e545b1ebd0" class="linksExternos" target="_blank">Steam Deack</a>
                     </div>          
                     <div class="col-sm-12 col-md-5 col-lg-12">
-                        <img src="../assets/imagenes/Switch.webp" class="boxImg" alt="Nintendo Switch">
+                        <img src="../assets/imagenes/Switch.webp" class="boxImg" alt="Nintendo Switch" loading="lazy">
                         <h4 class="subtitulos4">Nintendo Switch 32GB Standard color rojo neón, azul neón y negro</h4>
                         <a href="https://www.mercadolibre.com.ar/nintendo-switch-32gb-standard-color-rojo-neon-azul-neon-y-negro/p/MLA8755483?pdp_filters=category:MLA438566#searchVariation=MLA8755483&position=1&search_layout=stack&type=product&tracking_id=1e13e189-eeda-4a65-82d2-c145da7f5ef7" class="linksExternos" target="_blank">Nintendo Switch</a>
                     </div>
-                </div>
-               
+                </div>              
             </section>
             <h3 class="subtitulos3 boxSubtitulos">Hardware</h3>
             <section class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="../assets/imagenes/auriculares hyperx.webp" class="boxImg" alt="Auriculares hyperx">
+                        <img src="../assets/imagenes/auriculares hyperx.webp" class="boxImg" alt="Auriculares hyperx" loading="lazy">
                         <h4 class="subtitulos4">Auriculares inalámbricos HyperX Cloud Flight </h4>
                         <a href="https://www.mercadolibre.com.ar/auriculares-gamer-inalambricos-hyperx-cloud-flight-negro-con-luz-rojo-led/p/MLA15313319?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=125221141365&matt_match_type=&matt_network=g&matt_device=c&matt_creative=544135253008&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=139868337&matt_product_id=MLA15313319-product&matt_product_partition_id=1701193342077&matt_target_id=aud-1659384947926:pla-1701193342077&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfUzWhfTRg0z8VMl7XHecWAmXPzCI0vPCxbHXOP4QQ4oLNykCRLmdZwaArrOEALw_wcB" class="linksExternos" target="_blank">Auriculares HyperX</a>
                     </div>>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/nvidia gforce 3060.webp" class="boxImg" alt="placa de video">
+                        <img src="../assets/imagenes/nvidia gforce 3060.webp" class="boxImg" alt="placa de video" loading="lazy">
                         <h4 class="subtitulos4">Placa de video Nvidia GeForce RTX 3060  12GB</h4>
                         <a href="https://www.mercadolibre.com.ar/placa-de-video-nvidia-gigabyte-gaming-geforce-rtx-30-series-rtx-3060-gv-n3060gaming-oc-12gd-rev-10-oc-edition-12gb/p/MLA18618581?pdp_filters=category:MLA1658#searchVariation=MLA18618581&position=8&search_layout=grid&type=product&tracking_id=3868caae-c69d-4b9d-bad2-60e4cbe7f5c3" class="linksExternos" target="_blank">Nvidia GeForce RTX 3060</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3">
-                        <img src="../assets/imagenes/SDD.webp" class="boxImg" alt="Disco Solido">
+                        <img src="../assets/imagenes/SDD.webp" class="boxImg" alt="Disco Solido" loading="lazy">
                         <h4 class="subtitulos4">Disco sólido interno Kingston 960GB</h4>
                         <a href="https://www.mercadolibre.com.ar/disco-solido-interno-kingston-sa400s37960g-960gb/p/MLA12661607?pdp_filters=category:MLA1672#searchVariation=MLA12661607&position=3&search_layout=stack&type=product&tracking_id=178598a5-bad5-4115-b736-40d8352a9746" class="linksExternos" target="_blank">SDD Kingston 960GB</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/Ram.webp" class="boxImg" alt="Memoria Ram">
+                        <img src="../assets/imagenes/Ram.webp" class="boxImg" alt="Memoria Ram" loading="lazy">
                         <h4 class="subtitulos4">Memoria RAM  Pro gamer color negro 16GB</h4>
                         <a href="https://www.mercadolibre.com.ar/memoria-ram-vengeance-rgb-pro-gamer-color-negro-16gb-2-corsair-cmw16gx4m2d3600c18/p/MLA18339915?pdp_filters=category:MLA1694#searchVariation=MLA18339915&position=6&search_layout=grid&type=product&tracking_id=b8d35875-5f79-4cb7-84ab-0f4389c67bfc"  class="linksExternos" target="_blank">RAM Vengeance 16GB Corsair</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="../assets/imagenes/Fuente.webp" class="boxImg" alt="Fuente de alimentacion">
+                        <img src="../assets/imagenes/Fuente.webp" class="boxImg" alt="Fuente de alimentacion" loading="lazy">
                         <h4 class="subtitulos4">Fuente de alimentación Azza PSAZ-650W negra 200V</h4>
                         <a href="https://www.mercadolibre.com.ar/fuente-de-alimentacion-para-pc-azza-psaz-650w-650w-negra-200v-240v/p/MLA16237710?pdp_filters=category:MLA1695#searchVariation=MLA16237710&position=14&search_layout=grid&type=product&tracking_id=6cc70f47-eeec-4b7e-8804-8cd8ea3bf20c" class="linksExternos" target="_blank">Fuente de alimentacion Azza</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-3">
-                        <img src="../assets/imagenes/mother.webp" class="boxImg" alt="Motherboard">
+                        <img src="../assets/imagenes/mother.webp" class="boxImg" alt="Motherboard" loading="lazy">
                         <h4 class="subtitulos4">Motherboard Gigabyte H510m-h </h4>
                         <a href="https://articulo.mercadolibre.com.ar/MLA-930946253-motherboard-gigabyte-h510m-h-intel-10ma-11va-gen-lga-1200-pc-_JM?searchVariation=92208680750#searchVariation=92208680750&position=2&search_layout=grid&type=item&tracking_id=5a6cc700-eab6-47ca-b9c8-1e0352f52392" class="linksExternos" target="_blank">Motherboard Gigabyte H510m-h</a>
                     </div>
-                </div>
-                
+                </div>               
             </section>
             <h3 class="subtitulos3 boxSubtitulos">Giftcards</h3>
             <section class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="../assets/imagenes/giftcard 1.webp" class="boxImg" alt="Giftcard Steam $4000">
+                        <img src="../assets/imagenes/giftcard 1.webp" class="boxImg" alt="Giftcard Steam $4000" loading="lazy">
                         <h4 class="subtitulos4">Steam Wallet Gift Card - Ars$ 4000 - Buengift</h4>
                         <a href="https://articulo.mercadolibre.com.ar/MLA-1198418204-steam-wallet-gift-card-ars-4000-buengift-_JM#position=3&search_layout=stack&type=item&tracking_id=153d260b-7116-4339-9a5c-c52fb2ba41fb" class="linksExternos"target="_blank">Steam Gift Card</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/giftcard 2.webp" class="boxImg" alt="Giftcard Steam $1000">
+                        <img src="../assets/imagenes/giftcard 2.webp" class="boxImg" alt="Giftcard Steam $1000" loading="lazy">
                         <h4 class="subtitulos4">Steam Wallet Gift Card - Ars$ 1000 - Buengift</h4>
                         <a href="https://articulo.mercadolibre.com.ar/MLA-1198411635-steam-wallet-gift-card-ars-1000-buengift-_JM#position=2&search_layout=stack&type=item&tracking_id=153d260b-7116-4339-9a5c-c52fb2ba41fb" class="linksExternos"target="_blank">Steam Gift Card</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3">
-                        <img src="../assets/imagenes/giftcard 3.webp" class="boxImg" alt="Giftcard Steam US$50">
+                        <img src="../assets/imagenes/giftcard 3.webp" class="boxImg" alt="Giftcard Steam US$50" loading="lazy">
                         <h4 class="subtitulos4">Steam Gift Card Itunes $50 Usd Region Usa / Entrega Rapida!</h4>
                         <a href="https://articulo.mercadolibre.com.ar/MLA-1200710685-steam-gift-card-itunes-50-usd-region-usa-entrega-rapida-_JM#position=1&search_layout=stack&type=item&tracking_id=153d260b-7116-4339-9a5c-c52fb2ba41fb" class="linksExternos"target="_blank">Steam Gift Card</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-12">
-                        <img src="../assets/imagenes/giftcard 4.webp" class="boxImg" alt="Giftcard Steam $8000">
+                        <img src="../assets/imagenes/giftcard 4.webp" class="boxImg" alt="Giftcard Steam $8000" loading="lazy">
                         <h4 class="subtitulos4">Steam Wallet Gift Card - Ars$ 8000 - Buengift</h4>
                         <a href="https://articulo.mercadolibre.com.ar/MLA-1198386187-steam-wallet-gift-card-ars-8000-buengift-_JM#position=6&search_layout=stack&type=item&tracking_id=153d260b-7116-4339-9a5c-c52fb2ba41fb" class="linksExternos"target="_blank">Steam Gift Card</a>
                     </div>
                 </div>
- 
             </section>
         </main>           
+        <!--FOOTER CON ANIMACIONES EN LAS REDES SOCIALES-->   
             <footer class="container-fluid flexFooter2">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
