--- a/pages/streaming.html
+++ b/pages/streaming.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Gamer's Shire</title>
+        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos, tu PC o consola. Encontra todos los titulos, sus historias, los mejores streamers especializados y mas. Sumate a la comunidad de gaming mas completa e interactiva.">
+        <meta name="keywords"  content="STRAMERS, STREAMING, FAVORITOS, MUSICA, POLITICA, REBORD, RODRIGUEZ, GALATTI">
+        <title>The Gamer's Shire | Reencotrate con tus Streamers favoritos</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -12,9 +14,10 @@
     </head>
     <body>
         <header>
+             <!--NAVEGADOR FIJO DE BOOTSTRAP CON DISEÑO PROPIO-->
             <nav class="navbar navbar-expand-lg  elHeaderBox">
                 <div class="container-fluid ">
-                  <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="" width="60" height="58"></a>
+                  <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="logo" width="60" height="58"></a>
                   <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -43,21 +46,22 @@
         <main>
             <h1>The Gamer's Shire</h1>
             <h2 class="claseH2">Streaming</h2>
+            <p class="parrafoH2">Te presentamos a los TOP RANKED Streamers y sus canales especializados en tus juegos favoritos, aprende de ellos como juegan los profesionales. No solo nos gustan los juegos, sino también diversos contenidos.Nuestros moderadores seleccionan los mejores canales para darle mayor variedad a tu entretenimiento; encontrá canales desde humoristicos hasta politicos. </p>
             <h3 class="subtitulos3 boxSubtitulos">Canales Especializados</h3>
             <section  class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="../assets/imagenes/migguztv.png" class="boxImg" alt="MigguzTV">
-                        <h4  class="subtitulos4">MigguzTV - Canal especializado en World of Warcraft</h4>
-                        <a href="https://www.twitch.tv/search?term=migguztv" class="linksExternos" target="_blank">MigguzTV</a>
+                        <img src="../assets/imagenes/asmongold.webp" class="boxImg" alt="Asmongold" loading="lazy">
+                        <h4  class="subtitulos4">Asmongold - Canal especializado en World of Warcraft</h4>
+                        <a href="https://www.twitch.tv/asmongold" class="linksExternos" target="_blank">Asmongold</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/nicro4fun.jpg" class="boxImg" alt="Nicro4fun">
+                        <img src="../assets/imagenes/nicrofinal.jpg" class="boxImg" alt="Nicro4fun" loading="lazy">
                         <h4 class="subtitulos4">nicro4fun - Canal especializado en RPG - Poe, Diablo.</h4>
                         <a href="https://www.twitch.tv/nicro4fun" class="linksExternos" target="_blank">Nicro4fun</a>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-3">
-                        <img src="../assets/imagenes/froggerOW.png" class="boxImg" alt="FroggerOW">
+                        <img src="../assets/imagenes/froggerOW.png" class="boxImg" alt="FroggerOW" loading="lazy"> 
                         <h4 class="subtitulos4">FroggerOW - Canal Especializado en Overwatch 2</h4>
                         <a href="https://www.twitch.tv/froggerow" class="linksExternos" target="_blank">FroggerOW</a>
                     </div>
@@ -67,22 +71,22 @@
             <section class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="../assets/imagenes/duendepablo.jpg" class="boxImg" alt="Duendepablo">
+                        <img src="../assets/imagenes/duendepablo.jpg" class="boxImg" alt="Duendepablo" loading="lazy">
                         <h4 class="subtitulos4" >DuendePablo - Gaming, IRL, Entretenimiento</h4>
                         <a href="https://www.twitch.tv/duendepablo" class="linksExternos" target="_blank">Duendepablo</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/robergalatti.jpg" class="boxImg" alt="Roberto Galati">
+                        <img src="../assets/imagenes/galatti2.jpg" class="boxImg" alt="Roberto Galati" loading="lazy">
                         <h4  class="subtitulos4">robergalati - IRL, gaming, humor</h4>
                         <a href="https://www.twitch.tv/search?term=robergalati" class="linksExternos" target="_blank">Robergalati</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3">
-                        <img src="../assets/imagenes/baity.png" class="boxImg" alt="Baitybait">
+                        <img src="../assets/imagenes/elbaito.jpg" class="boxImg" alt="Baitybait" loading="lazy">
                         <h4  class="subtitulos4">BaityBait - industria del gaming y humor</h4>
                         <a href="https://www.twitch.tv/baitybait" class="linksExternos" target="_blank">Baitybait</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-12">
-                        <img src="../assets/imagenes/tomasrebord.png" class="boxImg" alt="Tomas Rebord">
+                        <img src="../assets/imagenes/tomas-rebordjpg.webp" class="boxImg" alt="Tomas Rebord" loading="lazy">
                         <h4  class="subtitulos4">tomasrebord - Politica, entrevistas y Entretenimiento</h4>
                         <a href="https://www.twitch.tv/tomasrebord" class="linksExternos" target="_blank">tomasrebord</a>
                     </div>
@@ -92,23 +96,24 @@
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="../assets/imagenes/djmiss shelton.png" class="boxImg" alt="Dj Miss Shelton">
+                    <img src="../assets/imagenes/djmiss shelton.png" class="boxImg" alt="Dj Miss Shelton" loading="lazy">
                     <h4   class="subtitulos4">DJMissShelton - DJ Party</h4>
                     <a href="https://www.twitch.tv/djmissshelton" class="linksExternos" target="_blank">DjMissShelton</a>
                 </div>
                 <div class="col-sm-12 col-md-5 col-lg-4">
-                    <img src="../assets/imagenes/sintica.png" class="boxImg" alt="Sintica">
+                    <img src="../assets/imagenes/sintica final.jpg" class="boxImg" alt="Sintica">
                     <h4  class="subtitulos4">Sintica - DJ House</h4>
                     <a href="https://www.twitch.tv/sintica" class="linksExternos" target="_blank">Sintica</a>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-3">
-                    <img src="../assets/imagenes/chillhop.png" class="boxImg" alt="Chillhop Music">
+                    <img src="../assets/imagenes/chillhop music.jpg" class="boxImg" alt="Chillhop Music" loading="lazy">
                     <h4  class="subtitulos4">ChillhopMusic -  Radio  jazzy & lofi hip hop beats</h4>
                     <a href="https://www.twitch.tv/chillhopmusic" class="linksExternos" target="_blank">ChillhopMusic</a>
                 </div>
             </div>          
         </section>
         </main>        
+        <!--FOOTER CON ANIMACIONES EN LAS REDES SOCIALES-->   
         <footer class="container-fluid flexFooter2">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
