--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Gamer's Shire</title>
+        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos, tu PC o consola. Encontra todos los titulos, sus historias, los mejores streamers especializados y mas. Sumate a la comunidad de gaming mas completa e interactiva.">
+        <meta name="keywords"  content="JUEGOS, FISICOS, DIGITALES, LORE, RESEÑAS, CRITICAS">
+        <title>The Gamer's Shire | Precios óptimos en videojuegos fisicos o digitales</title>
         <link rel="shortcut icon" href="../assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -12,6 +14,7 @@
     </head>
     <body>
         <header>
+             <!--NAVEGADOR FIJO DE BOOTSTRAP CON DISEÑO PROPIO-->
             <nav class="navbar navbar-expand-lg  elHeaderBox">
                 <div class="container-fluid ">
                   <a class="navbar-brand" href="../index.html"> <img src="../assets/imagenes/Logo final.png" alt="" width="60" height="58"></a>
@@ -41,33 +44,35 @@
               </nav>
         </header>
         <main>
+             <!--COLOQUE GRAN PARTE DEL CONTENIDO DE ESTA PAGINA DENTRO DEL MAIN PARA HACER UN USO MAS FACIL DEL MISMO-->
             <h1>The Gamer's Shire</h1>
             <h2 class="claseH2">Videojuegos</h2>
+            <p class="parrafoH2">Encontrá toda nuestra selección de juegos fisicos y digitales con nuestro descuento de navidad, también contamos con todo el lore de tus juegos favoritos y todas las reseñas y criticas que necesitas saber antes de llevarte un título</p>
             <h3 class="subtitulos3 boxSubtitulos">Nuestras copias digitales</h3>
             <section class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/wow 4.jpg" class="boxImg" alt="World of Warcraft: Dragonflight">
+                        <img src="../assets/imagenes/wow 4.jpg" class="boxImg" alt="World of Warcraft: Dragonflight" loading="lazy">
                         <h4   class="subtitulos4">Precompra: World of Warcraft Dragonflight</h4>
                         <a href="https://us.shop.battle.net/es-es/product/world-of-warcraft-dragonflight?utm_source=worldofwarcraft.com&utm_campaign=bop-wow-global-dragonflight-prepurchase&utm_medium=internal&utm_content=hp-masthead"  class="linksExternos" target="_blank">World of Warcraft Dragonflight</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-3">
-                        <img src="../assets/imagenes/poe 2.jpg" class="boxImg" alt="Path of Exile: Lake of Kalandra">
+                        <img src="../assets/imagenes/poe 2.jpg" class="boxImg" alt="Path of Exile: Lake of Kalandra" loading="lazy">
                         <h4   class="subtitulos4">Free to play: Path of Exile: Lake of Kalandra</h4>
                         <a href="https://www.pathofexile.com/"  class="linksExternos" target="_blank">Path of Exile: Lake of Kalandra</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/cyberpunk 2077.jpg" class="boxImg" alt="Cyberpunk 2077">
+                        <img src="../assets/imagenes/cyberpunk 2077.jpg" class="boxImg" alt="Cyberpunk 2077" loading="lazy">
                         <h4   class="subtitulos4">Cyberpunk 2077</h4>
                         <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/"   class="linksExternos" target="_blank">Cyberpunk 2077</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-6">
-                        <img src="../assets/imagenes/witcher 3.jpg" class="boxImg" alt="The Witcher 3: Wild Hunt">
+                        <img src="../assets/imagenes/witcher 3.jpg" class="boxImg" alt="The Witcher 3: Wild Hunt" loading="lazy">
                         <h4   class="subtitulos4">The Witcher 3: Wild Hunt - Game of the Year Edition</h4>
                         <a href="https://store.steampowered.com/app/292030/The_Witcher_3_Wild_Hunt/"  class="linksExternos" target="_blank">The Witcher 3: Wild Hunt</a>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5">
-                        <img src="../assets/imagenes/overwatch 2.jpg" class="boxImg" alt="Overwatch 2">
+                        <img src="../assets/imagenes/overwatch 2.jpg" class="boxImg" alt="Overwatch 2" loading="lazy">
                         <h4   class="subtitulos4">Free to play: Overwatch 2</h4>
                         <a href="https://overwatch.blizzard.com/es-es/"  class="linksExternos" target="_blank">Overwatch 2</a>
                     </div>
@@ -77,27 +82,27 @@
             <section class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/Wow 2.jpg" class="boxImg" alt="Lore World of Warcraft">
+                        <img src="../assets/imagenes/Wow 2.jpg" class="boxImg" alt="Lore World of Warcraft" loading="lazy">
                         <h4   class="subtitulos4">Historia completa: World of Warcraft</h4>
                         <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"   class="linksExternos" target="_blank">World of Warcraft</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-3">
-                        <img src="../assets/imagenes/elden ring vol 1.jpg" class="boxImg" alt="Elden Ring Volumen 1">
+                        <img src="../assets/imagenes/elden ring vol 1.jpg" class="boxImg" alt="Elden Ring Volumen 1" loading="lazy">
                         <h4   class="subtitulos4">Elden Ring: Los Libros Del Saber, Volumen I: Las Tierras Intermedias</h4>
                         <a href="https://www.amazon.es/Elden-Ring-Volumen-Tierras-Intermedias/dp/3869931175"  class="linksExternos" target="_blank">Elden Ring Vol. 1</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="../assets/imagenes/elden ring vol 2.jpg" class="boxImg" alt="Elden Ring Volumen 2">
+                        <img src="../assets/imagenes/elden ring vol 2.jpg" class="boxImg" alt="Elden Ring Volumen 2" loading="lazy">
                         <h4   class="subtitulos4">Elden Ring: Los Libros Del Saber, Volumen Ii: Esquirlas De La Devastación</h4>
                         <a href="https://www.amazon.es/Elden-Ring-Volumen-Esquirlas-Devastaci%C3%B3n/dp/3869931221/ref=sr_1_2?keywords=elden+ring+los+libros+del+saber&qid=1666227177&qu=eyJxc2MiOiIyLjI0IiwicXNhIjoiMS40MCIsInFzcCI6IjAuOTkifQ%3D%3D&sprefix=elden+ring+%2Caps%2C386&sr=8-2" class="linksExternos" target="_blank">Elden Ring Vol. 2</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-6">
-                        <img src="../assets/imagenes/Poe.jpg" class="boxImg" alt="Path fo Exile">
+                        <img src="../assets/imagenes/Poe.jpg" class="boxImg" alt="Path fo Exile" loading="lazy">
                         <h4   class="subtitulos4">Path of Exile - Full story</h4>
                         <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos" target="_blank">Path of Exile</a>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5"> 
-                        <img src="../assets/imagenes/overwatch lore.jpg" class="boxImg" alt="Overwatch">
+                        <img src="../assets/imagenes/overwatch lore.jpg" class="boxImg" alt="Overwatch" loading="lazy">
                         <h4   class="subtitulos4">Lore completo - Overwatch</h4>
                         <a href="https://altertime.es/category/lore-de-overwatch" class="linksExternos" target="_blank">Lore Overwatch</a>
                     </div>
@@ -105,6 +110,7 @@
             </section>
         </main>
         <section>
+             <!--COLOQUE AQUI TODOS LO QUE CONSIDERE MENOS IMPORTANTE COMO PARA TEMER CONTENIDO DENTOR Y FUERA DEL HEADER-->
             <h3 class="subtitulos3Section boxSubtitulosSection">Reseñas y criticas</h3>
             <section class="container contenedorFlexSection">
                 <h4   class="subtitulos4Section">World of Warcraft Shadowlands</h4>
@@ -135,7 +141,7 @@
                 <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" class="linksExternosSection"  target="_blank">mas info</a>
             </section>
         </section>
-
+<!--FOOTER CON ANIMACIONES EN LAS REDES SOCIALES-->   
             <footer class="container-fluid flexFooter2">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
