--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Gamer's Shire</title>
+        <meta name="description" content="Encontra todo lo relacionado a tus juegos favoritos, tu PC o consola. Encontra todos los titulos, sus historias, los mejores streamers especializados y mas. Sumate a la comunidad de gaming mas completa e interactiva.">
+        <meta name="keywords"  content="STREAMING, RECOMENDACIONES, SETUP, LORE">
+        <title>The Gamer's Shire| Inicio | Todo para el gamer</title>
         <link rel="shortcut icon" href="./assets/imagenes/Logo final.png" type="icono pagina" />
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/estilos.css">
@@ -12,9 +14,10 @@
     </head>
     <body>
         <header>
+            <!--NAVEGADOR FIJO DE BOOTSTRAP CON DISEÑO PROPIO-->
             <nav class="navbar navbar-expand-lg  elHeaderBox">
                 <div class="container-fluid ">
-                  <a class="navbar-brand" href="./index.html"> <img src="./assets/imagenes/Logo final.png" alt="" width="60" height="58"></a>
+                  <a class="navbar-brand" href="./index.html"> <img src="./assets/imagenes/Logo final.png" alt="Logo" width="60" height="58"></a>
                   <button class="navbar-toggler navbar-toggler2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -41,23 +44,25 @@
               </nav>
         </header>
         <main>
+             <!--COLOQUE GRAN PARTE DEL CONTENIDO DE ESTA PAGINA DENTRO DEL MAIN PARA HACER UN USO MAS FACIL DEL MISMO CONSIDERANDO QUE ES COMO UN RESUMEN DE LO QUE PODES ENCONTRAR-->
             <h1>The Gamer's Shire</h1>
-            <h2 class="claseH2">Nuestras Recomendaciones </h2>
+            <h2 class="claseH2">Recomendados </h2>
+            <p class="parrafoH2">Encontra aquí nuestras recomendaciones con la mejor calidad y el mejor precio de la web. Trabajo exclusivo de nuestros editores top ranked.    </p>
             <h3 class="subtitulos3 boxSubtitulos">Streaming mas vistos por la comunidad</h3>
             <section class="container contenedorFlex">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4">
-                        <img src="./assets/imagenes/A_Seagull_portada.png" class="boxImg" alt="A_Seagull - Overwatch 2 competitivo">
+                        <img src="./assets/imagenes/A_Seagull_portada.png" class="boxImg" alt="A_Seagull - Overwatch 2 competitivo" loading="lazy" >
                         <h4 class="subtitulos4">A_Seagull - Overwatch 2 competitivo</h4>
                         <a href="https://www.twitch.tv/a_seagull" class="linksExternos" target="_blank">A_Seagull Twitch</a>
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img src="./assets/imagenes/Ibai.jpg" class="boxImg" alt="ibai - Deportes y entretenimiento">
+                        <img src="./assets/imagenes/Ibai.jpg" class="boxImg" alt="ibai - Deportes y entretenimiento" loading="lazy">
                         <h4 class="subtitulos4">ibai - Deportes y entretenimiento</h4>
                         <a href="https://www.twitch.tv/ibai" class="linksExternos" target="_blank">ibai Twitch</a>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-3">
-                        <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodrigue - humor y entretenimiento">
+                        <img src="./assets/imagenes/luquitarodriguez.png" class="boxImg" alt="luquitarodrigue - humor y entretenimiento" loading="lazy">
                         <h4 class="subtitulos4">luquitarodriguez - humor y entretenimiento</h4>
                         <a href="https://www.twitch.tv/luquitarodriguez" class="linksExternos target="_blank"> luquitarodriguez Twitch</a>
                     </div>
@@ -73,17 +78,17 @@
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="./assets/imagenes/nvidia gforce 3060.webp" class="boxImg" alt="placa de video">
+                    <img src="./assets/imagenes/nvidia gforce 3060.webp" class="boxImg" alt="placa de video" loading="lazy">
                     <p class="parrafos">Nvidia Gigabyte GeForce RTX 30 Series RTX 3060</p>
                     <a href="https://www.mercadolibre.com.ar/placa-de-video-nvidia-gigabyte-gaming-geforce-rtx-30-series-rtx-3060-gv-n3060gaming-oc-12gd-rev-10-oc-edition-12gb/p/MLA18618581?pdp_filters=category:MLA1658#searchVariation=MLA18618581&position=8&search_layout=grid&type=product&tracking_id=3868caae-c69d-4b9d-bad2-60e4cbe7f5c3" class="linksExternos target="_blank">Nvidia GeForce RTX 3060</a>
                 </div>
                 <div class="col-sm-12 col-md-5 col-lg-4">
-                    <img src="./assets/imagenes/auriculares hyperx.webp" class="boxImg" alt="Auriculares hyperx">
+                    <img src="./assets/imagenes/auriculares hyperx.webp" class="boxImg" alt="Auriculares hyperx" loading="lazy">
                     <p class="parrafos">Auriculares inalámbricos HyperX Cloud Flight con luz rojo</p>
                     <a href="https://www.mercadolibre.com.ar/auriculares-gamer-inalambricos-hyperx-cloud-flight-negro-con-luz-rojo-led/p/MLA15313319?matt_tool=80203390&matt_word=&matt_source=google&matt_campaign_id=14545592783&matt_ad_group_id=125221141365&matt_match_type=&matt_network=g&matt_device=c&matt_creative=544135253008&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=139868337&matt_product_id=MLA15313319-product&matt_product_partition_id=1701193342077&matt_target_id=aud-1659384947926:pla-1701193342077&gclid=Cj0KCQjwnbmaBhD-ARIsAGTPcfUzWhfTRg0z8VMl7XHecWAmXPzCI0vPCxbHXOP4QQ4oLNykCRLmdZwaArrOEALw_wcB" class="linksExternos target="_blank">Auriculares HyperX</a>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-3">
-                    <img src="./assets/imagenes/monitor.webp" class="boxImg alt="Monitor Gigabyte 27'">
+                    <img src="./assets/imagenes/monitor.webp" class="boxImg" alt="Monitor Gigabyte 27'" loading="lazy">
                     <p class="parrafos">Monitor gamer Gigabyte G27F led 27 " negro 100V/240V</p>
                     <a href="https://www.mercadolibre.com.ar/monitor-gamer-gigabyte-g27f-led-27-negro-100v240v/p/MLA16550870?pdp_filters=category:MLA14407#searchVariation=MLA16550870&position=4&search_layout=grid&type=product&tracking_id=011c78d9-179e-4896-8996-93dd791dee02" class="linksExternos target="_blank">Monitor gamer Gigabyte</a>
                 </div>
@@ -93,45 +98,44 @@
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="./assets/imagenes/Elden ring.jpg" class="boxImg" alt="Elden Ring">
+                    <img src="./assets/imagenes/Elden ring.jpg" class="boxImg" alt="Elden Ring" loading="lazy">
                     <h4 class="subtitulos4">Elden Ring</h4>
                     <a href="https://store.steampowered.com/app/1245620/ELDEN_RING/" class="linksExternos target="_blank"> Elden Ring -   Steam</a>
                 </div>
                 <div class="col-sm-12 col-md-5 col-lg-4">
-                    <img src="./assets/imagenes/Proyect zomboid.jpg" class="boxImg" alt="Proyect Zomboid">
+                    <img src="./assets/imagenes/Proyect zomboid.jpg" class="boxImg" alt="Proyect Zomboid" loading="lazy">
                     <h4 class="subtitulos4">Proyect Zomboid</h4>
                     <a href="https://store.steampowered.com/app/108600/Project_Zomboid/"  class="linksExternos target="_blank">Proyect Zomboid - Steam</a>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-3">
-                    <img src="./assets/imagenes/resident evil 2 remake.jpg" class="boxImg" alt="Resident evil 2">
+                    <img src="./assets/imagenes/resident evil 2 remake.jpg" class="boxImg" alt="Resident evil 2" loading="lazy">
                     <h4 class="subtitulos4">Resident Evil 2: Remake</h4>
                     <a href="https://store.steampowered.com/app/883710/Resident_Evil_2/"  class="linksExternos" target="_blank">Resident Evil 2: Remake - Steam</a>
                 </div>
             </div>
-
         </section>
         <h3 class="subtitulos3 boxSubtitulos">Lore mas visto por la comunidad</h3>
         <section class="container contenedorFlex">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="./assets/imagenes/Wow 1.jpg" class="boxImg" alt="Lore World of Warcraft">
+                    <img src="./assets/imagenes/Wow 1.jpg" class="boxImg" alt="Lore World of Warcraft" loading="lazy">
                     <br>
                     <a href="https://wow.fandom.com/es/wiki/Historia_de_Warcraft#L%C3%ADnea_Temporal"  class="linksExternos" target="_blank">World of Warcraft</a>
                 </div>
                 <div class="col-sm-12 col-md-5 col-lg-4">
-                    <img src="./assets/imagenes/cyberpunk 2077.jpg" class="boxImg" alt="cyberpunk 2077">
+                    <img src="./assets/imagenes/cyberpunk 2077.jpg" class="boxImg" alt="cyberpunk 2077" loading="lazy">
                     <br>
                     <a href="https://cyberpunk.fandom.com/es/wiki/Cyberpunk_2077" class="linksExternos target="_blank">Cyberpunk 2077</a>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-3">
-                    <img src="./assets/imagenes/Poe.jpg" class="boxImg" alt="Path of Exile">
+                    <img src="./assets/imagenes/Poe.jpg" class="boxImg" alt="Path of Exile" loading="lazy">
                     <br>
                     <a href="https://www.mediavida.com/foro/poe/lore-videos-castellano-historia-juego-580512" class="linksExternos" target="_blank">Path of Exile</a>
                 </div>
             </div>
-
         </section>
-        </main>        
+        </main>    
+        <!--FOOTER CON ANIMACIONES EN LAS REDES SOCIALES-->   
         <footer class="container-fluid flexFooter2">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
